*Titre commit: Correction layout/Css page contact et home + test API IntersectionObserver *Changement(s) effectué(s): - ajout des "overflow-y:auto" et propriété css "flex-start" pour les pages contacts - test OK pour l'implémentation de l'API instersectionObserver

--- a/app_mobile_ERON/src/app/tabs/tab-profil/contacts/contacts.page.scss
+++ b/app_mobile_ERON/src/app/tabs/tab-profil/contacts/contacts.page.scss
@@ -1,13 +1,15 @@
 ion-content {
-    --overflow: hidden !important;
+  //  --overflow: auto !important;
+   overflow-y: auto;
   }
   
   .all-items{
+    --overflow: auto !important;
     height: 100% !important;
     flex: 1 !important;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
   }
   .box {
